@@ -1,5 +1,10 @@
 <%= content_tag :tr, id: dom_id(user), class: "user" do %>
   <td><%= user.email %></td>
-  <td class="actions is-link"><%= link_to "Resend activation mail",
-    resend_activation_mail_user_path(user), remote: true, method: :post if user.activation_token.present? %></td>
+  <td class="actions is-link">
+    <%= link_to "Resend activation mail",
+      resend_activation_mail_user_path(user), remote: true, method: :post if user.activation_token.present? %>
+  </td>
+  <td class="actions is-link is-danger">
+    <%= link_to "Destroy", user_path(user), remote: true, method: :delete, class: "is-danger", data: { confirm: "Are you sure?" } if user != current_user %>
+  </td>
 <% end %>
