@@ -8,6 +8,7 @@
         <tr>
           <th>Email</th>
           <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
