@@ -14,7 +14,7 @@ Rails.application.routes.draw do
   delete "logout" => "sessions#destroy", as: "logout"
 
   resources :user_activation, only: [:edit, :update]
-  resources :users, only: [:index, :create] do
+  resources :users, only: [:index, :create, :destroy] do
     post :resend_activation_mail, on: :member
   end
 
