@@ -7,3 +7,4 @@ v 0.0.1 (unreleased)
 * Scope app name uniqueness to server and not entire IC (jvanbaarsen)
 * Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)
 * Schedule Health_checks in their own queue and run them in IC. (jvanbaarsen)
+* Add ability to remove users from the IC (brambokdam)
